# FinSkillOS

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  alembic.ini  app.py  docker-compose.yml  fsoctl.sh  pyproject.toml  requirements.txt
.devmd/: 00_Project_Context.md  01_Repository_And_Setup.md  02_DB_Foundation.md  03_Portfolio_Goal_Tracker.md  04_Market_Data_And_Signals.md  05_Regime_Engine.md  06_Risk_Guards.md  07_Command_Center_UI.md  08_Research_Hub_Index_Lab.md  09_Symbol_Lab.md  100_Trade_Memory_Entry_Mutate_Export_Ui.md  101_Market_Bar_Same_Day_Source_Dedup.md  102_Market_Kernel_Indicator_Backing_Bar_Guard.md  103_Remove_Unused_Placeholder_Page.md  104_Line_Chart_Crosshair_And_Accessibility.md  105_Control_Room_Freshness_Watchpoints.md  106_Control_Room_State_Band_Density.md  107_Http_Event_Calendar_Provider.md  108_State_Band_Density_Parity.md  109_Regime_State_Vector_Real_Evidence.md  10_News_Intelligence.md  110_Indicator_Grid_Density.md  111_Real_Data_Market_Refresh_Default.md  112_Worker_Auto_Start_And_Test_Isolation.md  113_Worker_Job_Queue.md  114_System_Ops_Enqueue_Request_Path.md  115_Reachable_Empty_Is_Live_And_Sample_Cleanup.md  116_Full_Cockpit_Refresh_Universe.md  117_Worker_Live_Mode_Toggle.md  118_Diagnostics_Work_Queue_And_Shell_State_Truth.md  119_Frontend_Live_Failure_Parity.md  11_Event_Radar.md  120_Event_Risk_Naming_Cleanup.md  121_Top_Navigation_Scanability.md  122_Ticker_Workspace_Boundary.md  123_Lower_Page_Column_Balance.md  124_Control_Room_Nested_Scroll_Cleanup.md  (+219 more)
api/: Dockerfile  main.py  (+9 more)
(+740 files in other folders)
